Styling and tweaks from PR review

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,9 @@
 $background-color-1:  #4e535c;
 $background-color-2:  coral;
+$background-color-3:  white;
 $font-color-1:        #ffffff;
+$font-color-2:        black;
+$font-color-3:        coral;
 
 .header {
   display: flex;
