--- a/src/containers/Board/Board.scss
+++ b/src/containers/Board/Board.scss
@@ -1,11 +1,11 @@
-html {
-  body {
-    #root {
-      .App {
-        .Board {
-          background-color: blue;
-        }
-      }
-    }
-  }
+$background-color-1:  #4e535c;
+$background-color-2:  coral;
+$background-color-3:  white;
+$font-color-1:        #ffffff;
+$font-color-2:        black;
+$font-color-3:        coral;
+
+.Board {
+  display: flex;
+  background-color: $background-color-3;
 }
