--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,6 +14,7 @@ $font-color-3:        coral;
   .headerTitle {
     font-size: 1.2em;
     color: white;
+    letter-spacing: 0.12em;
     position: relative;
     left: 1em;
   }
