--- a/src/containers/Board/Board.scss
+++ b/src/containers/Board/Board.scss
@@ -1,9 +1,13 @@
 $background-color-1:  #4e535c;
 $background-color-2:  coral;
 $background-color-3:  white;
+
 $font-color-1:        #ffffff;
-$font-color-2:        black;
+$font-color-2:        #4e535c;
 $font-color-3:        coral;
+$font-color-4:        black;
+
+$letter-spacing: 0.12em;
 
 .Board {
   display: flex;
