--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -18,14 +18,15 @@ $border-color-gray:         #C8CDD9;
 
 $letter-spacing: 0.12em;
 
-.card {
+.IN.QUEUE, .IN.PROGRESS, .DONE {
   // display: flex;
   // flex-direction: column;
   // align-items: center;
-  background-color: $background-color-gray;
-  border: 2px solid $border-color-gray;
+  transition-duration: 150ms;
+  border: 0.05em solid;
   height: 9em;
   width: 90%;
+  overflow: hidden;
   // padding: 4%;
   margin-bottom: 1em;
   .cardIdContainer {
@@ -34,6 +35,7 @@ $letter-spacing: 0.12em;
     align-items: center;
     .cardId {
       font-size: 0.7em;
+      font-weight: 600;
       color: $font-color-gray;
       letter-spacing: $letter-spacing;
       position: relative;
@@ -47,6 +49,7 @@ $letter-spacing: 0.12em;
     .cardTitle {
       font-size: 1.2em;
       font-weight: 500;
+      text-align: left;
       // font-weight: bold;
     }
     .cardDetails {
@@ -60,10 +63,127 @@ $letter-spacing: 0.12em;
       .cardConditions {
         position: relative;
         top: 1em;
-        .cardPriority, .cardAssignedTo {
+        .cardPriority, .cardAssignedBy {
           color: $font-color-2;
           text-align: left;
         }
+      }
+    }
+    .cardExtras {
+      .cardInteraction {
+        display: flex;
+        button {
+          background-color: blue;
+          height: 1em; width: 2em;
+          border: none;
+        }
+      }
+      .cardAssignedTo {
+        
+      }
+    }
+  }
+}
+
+.IN.QUEUE:hover, .IN.PROGRESS:hover, .DONE:hover {
+  height: 11em;
+  width: 95%;
+}
+
+.IN.QUEUE {
+  background-color: $background-color-orange;
+  border-color: $border-color-orange;
+  .cardIdContainer {
+    .cardId {
+      color: $font-color-orange;
+    }
+  }
+  .cardContent {
+    .cardTitle {
+      color: $font-color-2;
+    }
+    .cardDetails {
+      .cardBody {
+        color: $font-color-2;
+      }
+      .cardConditions {
+        .cardPriority, .cardAssignedBy {
+          color: $font-color-2;
+        }
+      }
+    }
+    .cardExtras {
+      .cardInteraction {
+  
+      }
+      .cardAssignedTo {
+        
+      }
+    }
+  }
+}
+
+.IN.PROGRESS {
+  background-color: $background-color-green;
+  border-color: $border-color-green;
+  .cardIdContainer {
+    .cardId {
+      color: $font-color-green;
+    }
+  }
+  .cardContent {
+    .cardTitle {
+      color: $font-color-2;
+    }
+    .cardDetails {
+      .cardBody {
+        color: $font-color-2;
+      }
+      .cardConditions {
+        .cardPriority, .cardAssignedBy {
+          color: $font-color-2;
+        }
+      }
+    }
+    .cardExtras {
+      .cardInteraction {
+  
+      }
+      .cardAssignedTo {
+        
+      }
+    }
+  }
+}
+
+.DONE {
+  background-color: $background-color-gray;
+  border-color: $border-color-gray;
+  .cardIdContainer {
+    .cardId {
+      color: $font-color-gray;
+    }
+  }
+  .cardContent {
+    .cardTitle {
+      color: $font-color-2;
+    }
+    .cardDetails {
+      .cardBody {
+        color: $font-color-2;
+      }
+      .cardConditions {
+        .cardPriority, .cardAssignedBy {
+          color: $font-color-2;
+        }
+      }
+    }
+    .cardExtras {
+      .cardInteraction {
+  
+      }
+      .cardAssignedTo {
+        
       }
     }
   }
