--- a/src/containers/NewTask/NewTask.scss
+++ b/src/containers/NewTask/NewTask.scss
@@ -1,22 +1,4 @@
-$background-color-1:        #ffffff;
-$background-color-2:        #4e535c;
-$background-color-orange:   #fcf0dc;
-$background-color-green:    #E4FDC9;
-$background-color-gray:     #F7F8FB;
-
-$font-color-1:        #ffffff;
-$font-color-2:        #4e535c;
-$font-color-orange:   #F5B349;
-$font-color-green:    #A7DB71;
-$font-color-gray:     #B7BDC8;
-
-$border-color-1:            #ffffff;
-$border-color-2:            #4e535c;
-$border-color-orange:       #F5AB3A;
-$border-color-green:        #91D34B;
-$border-color-gray:         #C8CDD9;
-
-$letter-spacing: 0.12em;
+@import '../../../sass/config';
 
 .NewTaskButton {
   display: flex;
@@ -38,4 +20,41 @@ $letter-spacing: 0.12em;
 .NewTaskButton:hover {
   color: $font-color-green;
   border: 0.05em solid $border-color-green;
+}
+
+.modal {
+  position: fixed;
+  top: 10em;
+  border-radius: $modal-border-radius;
+  // padding: 1em;
+  background-color: $background-color-1;
+  height: 40em; width: 40em;
+  overflow: hidden;
+  .headerContainer {
+    border-radius: $modal-border-radius $modal-border-radius 0 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: $modal-background-color-2;
+    height: 3.5em;
+    .headerText {
+      border-radius: $modal-border-radius;
+      font-size: 1.2em;
+      color: $font-color-1;
+      letter-spacing: $letter-spacing;
+      position: relative;
+      left: 1em;
+    }
+  }
+}
+
+.overlay {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $overlay-color-1;
 }
