--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 33%;
   .columnContainer {
     display: flex;
     justify-content: center;
